# OpenGLCppTemplate

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md
cmake/: SetupGLFW.cmake
ext/: glad.h  linmath.h
ext/glad/: gl.h
src/: ext.cpp  glad.c  glad.cpp  main.c  main.cpp
